2011-xx-xx:
    * version 3.1.1
    * Compatibility fixes for Firefox 5.x and 6.x. Also bumped maxVersion accordingly
    * The heart indiciator for bookmarked pages also shows the correct
      state now when hovering over a link

2011-04-21: "The Return Of Copy And Paste"
    * version 3.1
    * IMPORTANT: PASSTHROUGH mode has been reworked. Press 'i' to ignore a single
      key, and "Shift-Esc" or "Insert" to toggle vimperator completely.
    * IMPORTANT: Ctrl-c/x/v/z do their expected thing now. We managed that by just
      reshuffling some commands.
    * IMPORTANT: CARET mode is now activated with 'c' instead of 'i'
    * IMPORTANT: :viusage, :exusage and :optionusage (and the manually created
      index of all commands in the helpfile) have been replaced by a single
      :usage command.
    * IMPORTANT: The multiline output has been reworked to make it more
      clearer in which mode you are. This means, that while 'more' is the new
      default, you have to explicitly close the output window with Esc or 'q'. This
      has the advantage that you never have to guess if the next key like 'j' is
      sent to the output window or to the page in case you are at the end of the output.
      Therefore, also the 'more' option has been removed.
    * Add 'animations' option to globablly decide if you want the animations
      in our UI or not. NOTE: Not yet fully implemented for all animations.
    * Slight changes in how the completion and command output list is graphically displayed
    * Readded 'bookmark' and 'history' to the 'status' option to get the old
      information about bookmark state and back/forward possibilities from Vimperator 2.x
      Thanks lolilolicon.
    * Vimperator's command line is now a fully supported toolbar. This means you
      can just right click it, select "Customize", and drag'n drop any
      items in the command line like the combined back/forward button and